[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/ui/menu/GameMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/supermarket/shelves/variation/ShelvesDouble8.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/material/floor-tile.tres" type="Material" id=3]
[ext_resource path="res://assets/environment/Environment.tres" type="Environment" id=4]
[ext_resource path="res://scenes/menu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/supermarket/supermarket.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/model/supermarket/building/PillarModel.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/model/supermarket/building/WallModel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/supermarket/Cashier.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/supermarket/prop/AdPanel.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ad/PromoAd.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/menu/MenuScene.gd" type="Script" id=12]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/texture/ceiling_nm.tres" type="Texture" id=14]
[ext_resource path="res://scenes/ui/menu/core/form/GameMenuButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/ui/transitions/ScreenTransition.tscn" type="PackedScene" id=16]

[sub_resource type="BoxShape" id=16]
extents = Vector3( 25, 0.5, 40 )

[sub_resource type="CubeMesh" id=17]
material = ExtResource( 3 )
size = Vector3( 50, 1, 80 )

[sub_resource type="QuadMesh" id=20]
size = Vector2( 40, 40 )

[sub_resource type="SpatialMaterial" id=24]
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 14 )

[sub_resource type="QuadMesh" id=21]
material = SubResource( 24 )
size = Vector2( 40, 20 )

[sub_resource type="SpatialMaterial" id=10]

[sub_resource type="QuadMesh" id=22]
material = SubResource( 10 )
size = Vector2( 40, 40 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("Scene/Viewport")

[sub_resource type="SpatialMaterial" id=23]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 7 )

[node name="MainMenu" type="Node"]
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "SupermarketMusic"

[node name="Scene" type="Spatial" parent="."]
script = ExtResource( 12 )

[node name="Viewport" type="Viewport" parent="Scene"]
size = Vector2( 200, 400 )
render_target_v_flip = true

[node name="PromoAd" parent="Scene/Viewport" instance=ExtResource( 11 )]
on = true

[node name="Promotion" type="Timer" parent="Scene"]
wait_time = 10.0
autostart = true

[node name="SuperMarket" type="Spatial" parent="Scene"]
__meta__ = {
"_edit_group_": true
}

[node name="Shelves" type="Spatial" parent="Scene/SuperMarket"]

[node name="ShelvesDouble8" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.25, 0, 8 )
items_strs = "can_of_soup,toilet_paper"

[node name="ShelvesDouble9" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 9.53674e-07, 0, 8 )
items_strs = "can_of_soup,toilet_paper"

[node name="ShelvesDouble10" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.75, 0, 8 )
items_strs = "can_of_soup,toilet_paper"

[node name="ShelvesDouble17" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -2.36434e-07, 0, 1, 0, 1, 0, -1, 0, -2.36434e-07, -13, 0, 4 )
items_strs = "snacks_01,snacks_02"

[node name="ShelvesDouble18" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -2.36434e-07, 0, 1, 0, 1, 0, -1, 0, -2.36434e-07, -13, 0, 8.25 )
items_strs = "soda_01,soda_02"

[node name="ShelvesDouble19" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -2.36434e-07, 0, 1, 0, 1, 0, -1, 0, -2.36434e-07, -13, 0, 11.5 )
items_strs = "soda_01,soda_02"

[node name="ShelvesDouble20" parent="Scene/SuperMarket/Shelves" instance=ExtResource( 2 )]
transform = Transform( -2.36434e-07, 0, 1, 0, 1, 0, -1, 0, -2.36434e-07, -13, 0, 15.5 )
items_strs = "soda_01,soda_02"

[node name="Cashiers" type="Spatial" parent="Scene/SuperMarket"]

[node name="Cashier" parent="Scene/SuperMarket/Cashiers" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.76795, -0.0802457, 16.3666 )

[node name="Cashier2" parent="Scene/SuperMarket/Cashiers" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.76795, -0.0802457, 16.3666 )

[node name="Cashier3" parent="Scene/SuperMarket/Cashiers" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5.232, -0.0802457, 16.3666 )

[node name="Cashier4" parent="Scene/SuperMarket/Cashiers" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.23205, -0.0802457, 16.3666 )

[node name="PlayerSpawn" type="Spatial" parent="Scene/SuperMarket"]

[node name="Start1" type="Spatial" parent="Scene/SuperMarket/PlayerSpawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -5.5 )

[node name="Start2" type="Spatial" parent="Scene/SuperMarket/PlayerSpawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.25, 0, -3.75 )

[node name="Start3" type="Spatial" parent="Scene/SuperMarket/PlayerSpawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.25, 0, -10.75 )

[node name="Start4" type="Spatial" parent="Scene/SuperMarket/PlayerSpawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.5, -1.5 )

[node name="Start5" type="Spatial" parent="Scene/SuperMarket/PlayerSpawn"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5, 10.5, 5 )

[node name="Building" type="Spatial" parent="Scene/SuperMarket"]

[node name="Floor" type="StaticBody" parent="Scene/SuperMarket/Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Scene/SuperMarket/Building/Floor"]
shape = SubResource( 16 )

[node name="Floor" type="MeshInstance" parent="Scene/SuperMarket/Building/Floor"]
mesh = SubResource( 17 )
material/0 = null

[node name="Walls" type="Spatial" parent="Scene/SuperMarket/Building"]
__meta__ = {
"_edit_group_": true
}

[node name="WallModel" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.2064, 0, 0.5 )

[node name="WallModel3" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 12.5 )

[node name="WallModel10" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 12, 0, 18 )

[node name="WallModel11" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -12, 0, 18 )

[node name="WallModel12" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 4, 18.5064 )

[node name="WallModel13" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7, 0, 25.25 )

[node name="WallModel14" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.77587, 0, 24.75 )

[node name="WallModel15" parent="Scene/SuperMarket/Building/Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5269, 0, 24.5 )

[node name="Pillars" type="Spatial" parent="Scene/SuperMarket/Building"]

[node name="PillarModel4" parent="Scene/SuperMarket/Building/Pillars" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 11.5 )

[node name="PillarModel5" parent="Scene/SuperMarket/Building/Pillars" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0 )

[node name="Roof" type="MeshInstance" parent="Scene/SuperMarket/Building"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 12.75, 0 )
layers = 2
mesh = SubResource( 20 )
material/0 = null

[node name="Roof2" type="MeshInstance" parent="Scene/SuperMarket/Building"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.5, 28 )
mesh = SubResource( 21 )
material/0 = null

[node name="InnerRoof" type="MeshInstance" parent="Scene/SuperMarket/Building"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 7.25, 0 )
visible = false
mesh = SubResource( 22 )
material/0 = null

[node name="Light" type="Spatial" parent="Scene/SuperMarket"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )

[node name="SpotLight1" type="SpotLight" parent="Scene/SuperMarket/Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8, 10.5 )
light_color = Color( 0.780392, 0.933333, 0.972549, 1 )
light_energy = 1.5
light_cull_mask = 4293918721
spot_range = 15.0
spot_angle = 56.35

[node name="SpotLight2" type="SpotLight" parent="Scene/SuperMarket/Light"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.75, -8, 10.5 )
light_color = Color( 0.780392, 0.933333, 0.972549, 1 )
light_energy = 1.5
light_cull_mask = 4293918721
spot_range = 15.0
spot_angle = 56.35

[node name="Ads" type="Spatial" parent="Scene/SuperMarket"]

[node name="Big1" parent="Scene/SuperMarket/Ads" instance=ExtResource( 10 )]
transform = Transform( -8.60946e-08, -1.51808e-08, 2, -0.347296, 1.96962, 0, -1.96962, -0.347296, -8.74228e-08, 3.5, 4, 17.934 )

[node name="AdPanelModel" parent="Scene/SuperMarket/Ads/Big1" index="0"]
transform = Transform( 1, 5.96046e-08, 0, -5.96046e-08, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="MeshInstance" parent="Scene/SuperMarket/Ads/Big1/AdPanelModel" index="1"]
transform = Transform( -4.37114e-08, 2.98023e-08, 1, 0, 1, -2.98023e-08, -1, -8.88178e-16, -4.37114e-08, -0.028142, 0.958023, 3.72529e-09 )
material/0 = SubResource( 23 )

[node name="Big2" parent="Scene/SuperMarket/Ads" instance=ExtResource( 10 )]
transform = Transform( -8.60946e-08, -1.51808e-08, 2, -0.347296, 1.96962, 0, -1.96962, -0.347296, -8.74228e-08, -3.5, 4, 17.934 )

[node name="AdPanelModel" parent="Scene/SuperMarket/Ads/Big2" index="0"]
transform = Transform( 1, 5.96046e-08, 0, -5.96046e-08, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="MeshInstance" parent="Scene/SuperMarket/Ads/Big2/AdPanelModel" index="1"]
transform = Transform( -4.37114e-08, 2.98023e-08, 1, 0, 1, -2.98023e-08, -1, -8.88178e-16, -4.37114e-08, -0.028142, 0.958023, 3.72529e-09 )
material/0 = SubResource( 23 )

[node name="Big3" parent="Scene/SuperMarket/Ads" instance=ExtResource( 10 )]
transform = Transform( 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 0, 0, 1, -7.4, 2.5, 11.5 )

[node name="AdPanelModel" parent="Scene/SuperMarket/Ads/Big3" index="0"]
transform = Transform( 1, 5.96046e-08, 0, -5.96046e-08, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="MeshInstance" parent="Scene/SuperMarket/Ads/Big3/AdPanelModel" index="1"]
transform = Transform( -4.37114e-08, 2.98023e-08, 1, 0, 1, -2.98023e-08, -1, -8.88178e-16, -4.37114e-08, -0.028142, 0.958023, 3.72529e-09 )
material/0 = SubResource( 23 )

[node name="Camera" type="Camera" parent="Scene"]
transform = Transform( -0.5, 0.0754791, 0.86273, 0, 0.996195, -0.0871557, -0.866025, -0.0435779, -0.498097, 5.92196, 1.58291, 14.2809 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 8
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Background" type="ColorRect" parent="CanvasLayer/MainMenu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 580.0
color = Color( 0.227451, 0.215686, 0.215686, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 580.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 75.0
margin_right = 360.0
margin_bottom = 109.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 13 )
text = "game-title"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 204.0
margin_right = 360.0
margin_bottom = 356.0
size_flags_vertical = 6

[node name="Start" parent="CanvasLayer/MainMenu/VBoxContainer/Buttons" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 48.0
highlight = true
button_name = "main-menu-start"
align_right = true

[node name="Continue" parent="CanvasLayer/MainMenu/VBoxContainer/Buttons" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 360.0
margin_bottom = 100.0
highlight = true
button_name = "main-menu-continue"
align_right = true

[node name="Settings" parent="CanvasLayer/MainMenu/VBoxContainer/Buttons" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 360.0
margin_bottom = 152.0
highlight = true
button_name = "main-menu-settings"
align_right = true

[node name="Quit" parent="CanvasLayer/MainMenu/VBoxContainer" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 512.0
margin_right = 360.0
margin_bottom = 560.0
size_flags_vertical = 10
button_name = "main-menu-quit"
align_right = true

[node name="GameMenu" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
main_title = "title-settings"
show_btn_back = true
show_btn_resume = false
show_btn_quit = false

[node name="ScreenTransition" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[connection signal="timeout" from="Scene/Promotion" to="Scene" method="_on_Promotion_timeout"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="resume_game_requested" from="CanvasLayer/GameMenu" to="." method="_on_GameMenu_resume_game_requested"]
[connection signal="fade_out_ended" from="CanvasLayer/ScreenTransition" to="." method="_on_ScreenTransition_fade_out_ended"]

[editable path="Scene/SuperMarket/Ads/Big1"]
[editable path="Scene/SuperMarket/Ads/Big2"]
[editable path="Scene/SuperMarket/Ads/Big3"]
